Created Restaurant Model.
* Made restaurant model and made it's relationship with items.

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 psycopg2 = "*"
 django-cloudinary-storage = "*"
 pillow = "*"
+django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 
 [dev-packages]
 
