Added Restaurant Model
* Designed Index page.

* Added filtering on basis of category.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ psycopg2 = "*"
 django-cloudinary-storage = "*"
 pillow = "*"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
+django-environ = "*"
 
 [dev-packages]
 
