--- a/DinerDash/.env
+++ b/DinerDash/.env
@@ -1,6 +1,14 @@
-CLOUD_NAME= "dllkbvnu7",
-API_KEY= "269392459365443",
-API_SECRET= "O5A7PN8dVBf-D2n400Pbfm8g55o"
+CLOUD_NAME=dllkbvnu7
+API_KEY=269392459365443
+API_SECRET=O5A7PN8dVBf-D2n400Pbfm8g55o
 DATABASE_NAME=DinerDash
 DATABASE_USER=postgres
 DATABASE_PASS=123456
+PORT=5433
+HOST=localhost
+
+EMAIL_HOST_USER=muhammad.ali.abbas@devsinc.com
+EMAIL_PORT=587
+EMAIL_HOST_PASSWORD=ipvkzrxvfxujcoku
+SECRET_KEY=django-insecure-a)ffa7s(zp$^jf7_3k+t(*i$ed&sxgn!+h0miv2(!i=15@%*25
+
