--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ crispy-bootstrap5 = "*"
 gunicorn = "*"
 django-heroku = "*"
 django-picklefield = "*"
+faker = "*"
+coverage = "*"
 
 [dev-packages]
 autopep8 = "*"
