Created the serializers for Items, retaurants and Customers.

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-picklefield = "*"
 faker = "*"
 coverage = "*"
 factory-boy = "*"
+djangorestframework = "*"
 
 [dev-packages]
 autopep8 = "*"
