Made the API's endpoint for Orders, Items,Restaurants,Customers and Categories.

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ faker = "*"
 coverage = "*"
 factory-boy = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 autopep8 = "*"
