--- a/DinerDash/.env
+++ b/DinerDash/.env
@@ -12,3 +12,7 @@ EMAIL_PORT=587
 EMAIL_HOST_PASSWORD=ipvkzrxvfxujcoku
 SECRET_KEY=django-insecure-a)ffa7s(zp$^jf7_3k+t(*i$ed&sxgn!+h0miv2(!i=15@%*25
 
+
+dllkbvnu7
+269392459365443
+O5A7PN8dVBf-D2n400Pbfm8g55o
